Nav-line alignment fixes (firefox).

--- a/static/css/objects.css
+++ b/static/css/objects.css
@@ -22,6 +22,7 @@
     padding: 0 0.2em;
     display: inline-block;
     font-size: 1.1em;
+    vertical-align: bottom;
 }
 .nav-line .sub-group { display: block; }
 .nav-line .nav-line-spacer.amp {
@@ -105,7 +106,7 @@
 }
 @media only screen and (min-width: 50em) {
     .nav-line { margin: 2rem 0; }
-    .nav-line .nav-line-spacer { width: 4rem; text-indent: 0; }
+    .nav-line .nav-line-spacer { width: 4rem; text-indent: 0; overflow: visible; }
     .nav-line .nav-line-spacer.amp {
         width: 1.5rem;
         top: 0.15em;
